# AlertFlow

./: .containers-sugar.yaml  .dockerignore  .gitignore  .pre-commit-config.yaml  .releaserc.json  .sugar.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  airflow.cfg  docker-compose.yaml  env.tpl  pyproject.toml
.github/workflows/: build.yaml  release.yaml
alertflow/: __init__.py  airflow.cfg
alertflow/config/: airflow.cfg
alertflow/dags/: test.py
alertflow/dags/episcanner/: episcanner_export_data.py
alertflow/dags/satellite-weather/: argentina.py  brasil.py  foz_do_iguacu.py  santos_sp.py
alertflow/dags/satellite_weather/: brasil.py
conda/: env-base.yaml  env.yaml
containers/: compose.yaml
containers/airflow/: Dockerfile  __init__.py  airflow-extras.in  airflow.cfg
containers/scripts/: create-admin.sh  entrypoint.sh  init-db.sh  poetry.sh  scheduler.sh  startup.sh  webserver.sh
docker/: Dockerfile  compose-base.yaml  compose-dev.yaml  compose-prod.yaml  compose.yaml
docker/scripts/: airflow.sh  entrypoint.sh
scripts/: entrypoint.sh  healthcheck.sh
volumes/airflow/dags/satellite_weather/: brasil.py  foz_do_iguacu.py
