[tool.poetry]
name = "alertflow"
version = "1.2.0"
description = ""
authors = ["Luã Bida Vacaro <luabidaa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
satellite-weather-downloader = { git = "https://github.com/luabida/satellite-weather-downloader", rev = "set-read-only" }
sqlalchemy = "<2.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.2.0"
isort = "^5.13.2"
containers-sugar = "1.11.1"
apache-airflow = "^2.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
